src/test/ui/double-type-import.stderr
error[E0252]: the name `X` is defined multiple times
  --> $DIR/double-type-import.rs:13:9
   |
LL |     pub use self::bar::X;
   |             ------------ previous import of the type `X` here
LL |     use self::bar::X;
   |         ^^^^^^^^^^^^ `X` reimported here
   |
   = note: `X` must be defined only once in the type namespace of this module
help: You can use `as` to change the binding name of the import
   |
LL |     use self::bar::X as OtherX;
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0252`.
